# jojodns

./: .gitignore  CMakeLists.txt  README.md  jojodns.c  todo.txt
config/: config.example.json
include/: cache.h  client.h  local.h  logging.h  relay_forwarders.h  relay_servers.h  server.h  zones.h
include/mods/modubus/: modubus.h
lib/: CMakeLists.txt
lib/parson/: README.md  parson.c  parson.h
scripts/examples/: run.sh  run_valgrind.sh
scripts/examples/ubus/: add_relay_forwarder.sh  add_relay_server.sh  get_config.sh
src/: CMakeLists.txt  cache.c  client.c  local.c  logging.c  main.c  relay_forwarders.c  relay_servers.c  server.c  zones.c
src/mods/modubus/: CMakeLists.txt  modubus.c  ubus.c
test/: CMakeLists.txt  test_client.c  test_client.h  test_common.h  test_main.c  test_relay_forwarders.c  test_relay_forwarders.h  test_server.c  test_server.h
